minor alignment issue
fix for minor alignment issue due to the conflict with chat styles

--- a/public/src/reports/_survey.scss
+++ b/public/src/reports/_survey.scss
@@ -340,6 +340,7 @@ $survey-response-color: extremely-satisfied #4e8d00,
 	}
 	.agent-select{
 		width: 180px;
+		margin:0 !important;
 	}
 	.group-select{ width: 95%;}
 	.survey-list-select{ width: 130px;}
